[tool.poetry]
name = "brawl stars"
version = "0.1.0"
description = ""
authors = ["Licantropo3392 <denisalbu287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
pyscreeze = "^1.0.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
